Increased java memory options in build.sbt